2018-05-21  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/tile.c (ReadTILEImage): Remove any existing size request
	when while image to tile.  This avoids size being used for both
	the input image size and the tile image size.  Fixes SourceForge
	issue #563 "tile:<image> appears to blow image up by 100% before
	applying tiling".

2018-05-20  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* fuzzing/oss-fuzz-build.sh: Patch from Paul Kehrer to disable
	libpng test programs and binaries while building libpng in support
	of oss-fuzz testing.

	* coders/dcm.c (DCM_ReadGrayscaleImage): If a palette was
	provided, the image may be in PseudoClass but we need DirectClass
	for gray image when GRAYSCALE_USES_PALETTE is not defined.  Fixes
	oss-fuzz 7550 "graphicsmagick/coder_DCM_fuzzer:
	Use-of-uninitialized-value in SyncImageCallBack". (Credit to
	OSS-Fuzz)
	(ReadDCMImage): Restore use of DCM_PostRescaleImage() in order to
	obtain suitably scaled DICOM again.  Hopefully it is more robust
	now.
	(DCM_ReadPaletteImage): Assure that DirectClass pixels are
	initialized.

2018-05-19  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/tiff.c (ReadTIFFImage): Remove strange addition of
	image->columns to pixel buffer offsets which now causes a heap
	overflow since the buffer has been right-sized.  Perhaps the extra
	offset plus the over-sized allocation was some attempt to avoid
	buffer over/underflows due to bugs in libtiff. Fixes oss-fuzz 8384
	"graphicsmagick/coder_BIGTIFF_fuzzer: Heap-buffer-overflow in
	put1bitbwtile" which is described to be a regression. (Credit to
	OSS-Fuzz)

	* magick/render.c (DrawImage): Fix wrong range checks which caused
	spurious "Parsing of SVG images fail with "Non-conforming drawing
	primitive definition (push)" failure.  Fixes SourceForge issue 561
	"Parsing of SVG images fail with "Non-conforming drawing primitive
	definition (push)"" which is due to problems caused by the fix for
	SourceForge issue 517.
