@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.4"
-#define public MagickPackageVersionAddendum ".020180521"
-#define public MagickPackageReleaseDate "snapshot-20180521"
+#define public MagickPackageVersionAddendum ".020180522"
+#define public MagickPackageReleaseDate "snapshot-20180522"
